# ThoreausKalendar

./: .gitignore  README.md  TODO.md  __contents__.xml  about.html  alldecember.html  build.xml  colophon.html  dec2.html  dec3.html  dec4.html  dec5.html  error-page.html  expath-pkg.xml  how.html  index.html  june.html  june2.html  june3.html  june4.html  may1.html  may2.html  navigation-menu.html  newapril.html  nov1.html  nov2.html  nov3.html  nov4.html  oct1.html  oct2.html  otherapril.html  pyproject.toml  renovate.json  repo.xml  requirements.txt  search-menu.html  toolbar.html
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml
data/: AllDecember.xml  May1.xml  May2.xml  Oct1.xml  __contents__.xml  alldecember.xml  dec2.xml  dec3.xml  dec4.xml  june.xml  june2.xml  june3.xml  june4.xml  may1.xml  may2.xml  newapril.xml  nov1.xml  nov2.xml  nov3.xml  nov4.xml  oct1.xml  oct2.xml  otherapril.xml  sample-date-extraction  sample-date-extraction.xq
modules/: __contents__.xml  app.xql  config.xqm  foo.xql  view.xql
page_heads/: alldecember  dec2  dec3  dec4  june  june2  june3  june4  may1  may2  newapril  nov4  oct1  oct2  otherapril
page_tails/: alldecember  dec2  dec3  dec4  june  june2  june3  june4  may1  may2  newapril  nov1  nov2  nov3  nov4  oct1  oct2  otherapril
pages/: newapril.html
resources/: __contents__.xml  jquery-ui.min.js
scripts/: beautify.py  generate_pages.py  minify.sh
search/: April2.xml  NewApril.xml  __contents__.xml  oldaprilsearch.xq  search-form.xq  search.xq
templates/: __contents__.xml  page.html
(+284 files in other folders)
