[tool.poetry]
name = "ThoreausKalendar"
version = "1.03"
description = "Python Rebuild of Thoreau's Kalendar"
authors = ["jdmartin"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.11.2"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportMissingModuleSource = false
